# thejawadfiles

./: CLAUDE.md  CNAME  index.html
FiveM-Kernel-Cheat/: ARCHITECTURE.md  CHANGELOG.md  OFFSET_UPDATE_GUIDE.md  PREREQUISITES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat
FiveM-Kernel-Cheat/client/: CMakeLists.txt  config.h  driver_interface.h  game.h  game_data.h  main.cpp  offset_scanner.h  overlay.h
FiveM-Kernel-Cheat/driver/: driver.c  driver.vcxproj
FiveM-Kernel-Cheat/loader/: CMakeLists.txt  loader.cpp
FiveM-Kernel-Cheat/shared/: shared.h
images/: generate_affidavits.py  generate_dossier.py  generate_warrant.py
